# testrobot

./: .gitignore  README.md  segmentation_pipeline.cpp
test_catkin/: frames.gv
test_catkin/src/my_pcl_tutorial/: CMakeLists.txt  (+2 more)
test_catkin/src/testrobots/scripts/extra scripts testrobot/unl_robotics/: CMakeLists.txt
test_catkin/src/testrobots/scripts/extra scripts testrobot/unl_robotics/IO/text/: annotations.txt  door1.txt  door2.txt  rooms_and_doors_p2_centered.txt  rooms_only.txt
test_catkin/src/testrobots/scripts/extra scripts testrobot/unl_robotics/controllers/: elevator_effort_controllers.yaml
test_catkin/src/testrobots/scripts/extra scripts testrobot/unl_robotics/include/: convexHull.h  map_writer.h  segmentation_pipeline.h
test_catkin/src/testrobots/scripts/extra scripts testrobot/unl_robotics/include/gmfXML/: gmfXMLElement.ipp  gmfXMLUtils.ipp
test_catkin/src/testrobots/scripts/extra scripts testrobot/unl_robotics/inspection/plan/onto/: inspect_01.xml
test_catkin/src/testrobots/scripts/extra scripts testrobot/unl_robotics/inspection/plan/pureza/: InspectionPoints.xml  foyer_route_00FULL_0Rotations.xml  foyer_route_00FULL_1Rotation.xml  foyer_route_01Init.xml  foyer_route_02Couch.xml  foyer_route_03FoyerDoors.xml  inspect_02.xml  inspection.xml  kitchen_door_01.xml  living_room_02.xml  living_room_03.xml  living_room_04.xml
test_catkin/src/testrobots/scripts/extra scripts testrobot/unl_robotics/launch/robots/: kobuki.launch.NormalCamera.xml
test_catkin/src/testrobots/scripts/extra scripts testrobot/unl_robotics/launch/services/: astra_amcl.launch.xml.Medium  embedded_yolo.launch
test_catkin/src/testrobots/scripts/extra scripts testrobot/unl_robotics/launch/worlds_real/: realTurtlebot_pureza.launch
test_catkin/src/testrobots/scripts/extra scripts testrobot/unl_robotics/launch/worlds_simulated/building4/: turtlebot_building4_2doors.launch
test_catkin/src/testrobots/scripts/extra scripts testrobot/unl_robotics/rviz/: building4_bot.rviz  hallway_bot.rviz
test_catkin/src/testrobots/scripts/extra scripts testrobot/unl_robotics/src/: bot_manager.cpp  convexHull.cpp  gaussKernel.cpp  inventoryClerk.cpp  move_base_director.cpp
test_catkin/src/testrobots/scripts/extra scripts testrobot/unl_robotics/srv/: elevator_door_request.srv  execute_plan.srv  move_absolute.srv  move_relative.srv
test_catkin/src/testrobots/scripts/extra scripts testrobot/unl_robotics/urdf/doors/: pr2_door.urdf
test_catkin/src/testrobots/scripts/extra scripts testrobot/unl_robotics/urdf/elevators/: elevator.urdf  threeStoryElevator.xacro
test_catkin/src/testrobots/scripts/extra scripts testrobot/unl_robotics/urdf/robots/: camera.plugins.xacro  kobuki_withPoleCamera.asus.urdf.xacro
test_catkin/src/testrobots/scripts/extra scripts testrobot/unl_robotics/worlds/: empty_items.world
test_catkin/src/testrobots/scripts/extra scripts testrobot/unl_robotics/worlds/furniture_workshop/: unfurnished.world
test_catkin/src/testrobots/scripts/scripts/: CMakeLists.txt  PeopleLocalizer.cpp
test_catkin/src/testrobots/scripts/scripts/include/: PeopleLocalizer.h  cvUtils.h  gaussKernel.ipp  segmentation_pipeline.h
unl_robotics/: README.md  package.xml
unl_robotics/IO/text/: room1_door1.txt  rooms_only_p2_centered.txt
unl_robotics/controllers/: elevator_position_controllers.yaml  pr2_door_controllers.yaml
unl_robotics/include/: bot_manager.h  inspection_plan.h  inventoryClerk.h  pclUtils.h  segmentation_pipeline.h
unl_robotics/include/gmfXML/: gmfXMLDocument.ipp
unl_robotics/inspection/items/: classification.org  long_term_item_sizes.org
unl_robotics/inspection/plan/pureza/: foyer_route_01.5_PreCouch.xml  foyer_route_02aCouch.xml  foyer_route_04Final.xml  home.xml  inspect_01.xml  living_room_01.xml  short.xml
unl_robotics/launch/controllers/: pr2_door_controllers.launch
unl_robotics/launch/robots/: kobuki.launch.WithPoleCamera.xml  turtlebot.launch
unl_robotics/launch/services/: amcl.launch  astra_amcl.launch.xml.ExtremeKidnap  bot_manager.launch
unl_robotics/launch/worlds_simulated/building4/: building4.launch  turtlebot_building4.launch  turtlebot_building4_1door.launch
unl_robotics/launch/worlds_simulated/empty_world/: empty_world_with_1door.launch  turtlebot_empty_items_world.launch
unl_robotics/launch/worlds_simulated/hallway/: turtlebot_hallway_noDoors.launch
unl_robotics/launch/worlds_simulated/onto/: onto.launch
unl_robotics/launch/worlds_simulated/pureza/: door_2.launch  doors_3_and_4.launch  pureza_no_furniture.launch  turtlebot_pureza.headCamera.launch  turtlebot_pureza.kidnapped.launch  turtlebot_pureza_1door.headCamera.launch  turtlebot_pureza_1door.launch  turtlebot_pureza_4doors.headCamera.launch  turtlebot_pureza_4doors.launch
unl_robotics/media/materials/scripts/: PurezaDoorTexture.material
unl_robotics/rviz/: empty.rviz  onto.rviz  pureza.rviz  view_with_yolo.rviz
unl_robotics/src/: bot_manager.cpp  inspection_plan.cpp  inventoryClerk.cpp  map_writer.cpp  move_door.cpp  segmenter.cpp  swing_door.cpp
unl_robotics/srv/: elevator_car_request.srv  node_ready.srv
unl_robotics/urdf/buildings/hallway/: hallway.xacro
unl_robotics/urdf/buildings/onto/meshes/: 357208.dae  357236.dae  357252.dae  357284.dae  357316.dae  357348.dae  357364.dae  357380.dae  357412.dae  357428.dae  357444.dae  357525.dae  357589.dae  357655.dae  357663.dae  357692.dae  357693.dae  357694.dae  358078.dae  358102.dae  358112.dae  358127.dae  358128.dae  358130.dae  359888.dae  359949.dae  360152.dae  360459.dae  360460.dae
unl_robotics/urdf/buildings/pureza/: pureza_trueLayout.xacro
unl_robotics/urdf/doors/: pr2_door_parameterized.urdf.xacro  pr2_door_parameterized.urdf.xacro.TextureExperiment
unl_robotics/urdf/light_switches/: light_switch.ORIG.xacro.xml  light_switch.xacro.xml
unl_robotics/urdf/robots/: kobuki_withPoleCamera.astra.urdf.xacro  pole_camera.xacro
unl_robotics/worlds/: empty.world
unl_robotics/worlds/furnished_worlds/pureza/: PurezaFurnitureDescription.org  pureza_furniture_v01.world
unl_robotics/worlds/hallway_world/: hallway.world
(+161 files in other folders)
